fixed header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ ul {
 li {
   color: var(--Yellow);
   margin: 0 0.3rem 0;
-  padding: 1.42rem;
+  padding: 1rem;
   display: block;
 }
 
